--- a/security/pom.xml
+++ b/security/pom.xml
@@ -5,11 +5,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.firefly.modules</groupId>
-    <artifactId>aggregator</artifactId>
+    <artifactId>security</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>security</module>
-    </modules>
 </project>
