--- a/security/pom.xml
+++ b/security/pom.xml
@@ -7,4 +7,13 @@
     <groupId>com.firefly.modules</groupId>
     <artifactId>security</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
